--- a/services/users/Dockerfile
+++ b/services/users/Dockerfile
@@ -25,4 +25,4 @@ RUN chmod +x /usr/src/app/entrypoint.sh
 COPY . /usr/src/app
 
 # run server
-CMD python manage.py run -h 0.0.0.0
+CMD ["/usr/src/app/entrypoint.sh"]
