--- a/mypy.ini
+++ b/mypy.ini
@@ -5,6 +5,6 @@ check_untyped_defs = True
 mypy_path = ./src
 python_version = 3.7
 
-[mypy-setuptools.*,flask_sqlalchemy,sqlalchemy.*,flask_restful,flask_testing]
+[mypy-setuptools.*,flask_sqlalchemy,sqlalchemy.*,flask_restful,flask_testing,db.*]
 ignore_missing_imports = True
 
