--- a/services/client/Dockerfile
+++ b/services/client/Dockerfile
@@ -11,6 +11,7 @@ ENV PATH /usr/src/app/node_modules/.bin:$PATH
 COPY package.json /usr/src/app/package.json
 COPY package-lock.json /usr/src/app/package-lock.json
 RUN npm ci
+RUN npm config set unsafe-perm true
 RUN npm install react-scripts@2.1.8 -g --silent
 
 # start app
